--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.github.promeg:tinypinyin:2.0.3' // TinyPinyin核心包，约80KB
+//    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
 }
 
 // See https://github.com/JetBrains/gradle-intellij-plugin/
